--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src//assets/Faficon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikin.ID</title>
+    <title>
+      Bikin.id | Empowering Digital Growth | Innovative IT & Web Solutions
+    </title>
+
+    <meta
+      name="title"
+      content="Bikin.id | Empowering Digital Growth | Innovative IT & Web Solutions"
+    />
+    <meta
+      name="description"
+      content="A global digital holding company delivering reliable IT solutions that connect ideas, technology, and people for a smarter, more connected future."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bikin.id/" />
+    <meta
+      property="og:title"
+      content="Bikin.id | Empowering Digital Growth | Innovative IT & Web Solutions"
+    />
+    <meta
+      property="og:description"
+      content="A global digital holding company delivering reliable IT solutions that connect ideas, technology, and people for a smarter, more connected future."
+    />
+    <meta property="og:image" content="https://bikin.id/featured-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
