--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src//assets/Faficon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikin.id</title>
-    <meta name="description" content="Bikin.id official website" />
-    <meta property="og:title" content="Bikin.id" />
-    <meta property="og:description" content="Official site of Bikin.id" />
-    <meta property="og:image" content="/featured-image.jpg" />
+    <title>PT BIKIN INOVASI TEKNOLOGI | Empowering Digital Growth | IT & Web
+          Solutions | Bikin.id</title>
+    <meta
+      name="description"
+      content="PT BIKIN INOVASI TEKNOLOGI - A global digital holding company delivering reliable IT solutions that connect ideas, technology, and people for a smarter, more connected future."
+    />
+
+    <!-- {/* Open Graph */} -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="PT BIKIN INOVASI TEKNOLOGI | Empowering Digital Growth | IT & Web
+          Solutions | Bikin.id"
+    />
+    <meta
+      property="og:description"
+      content="PT BIKIN INOVASI TEKNOLOGI - A global digital holding company delivering reliable IT solutions that connect ideas, technology, and people for a smarter, more connected future."
+    />
+    <meta property="og:image" content="https://bikin.id/featured-image.jpg" />
+    <meta property="og:url" content="https://bikin.id/" />
   </head>
   <body>
     <div id="root"></div>
