--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,17 @@
     />
     <meta property="og:image" content="https://bikin.id/featured-image.jpg" />
     <meta property="og:url" content="https://bikin.id/" />
+
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Tomorrow:wght@400;500;700&display=swap");
+
+      .font-inter {
+        font-family: "Inter", sans-serif;
+      }
+      .font-tomorrow {
+        font-family: "Tomorrow", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
