--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src//assets/Faficon.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PT BIKIN INOVASI TEKNOLOGI | Empowering Digital Growth | IT & Web
           Solutions | Bikin.id</title>
